<resources>

    <string name="app_name">City Movies</string>
    <string name="lostit">Lost It ?</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="reg">Register</string>
    <string name="registration">Registration</string>
    <string name="book">Book</string>

    <string name="facebook_app_id">1075159312507316</string>
    //AIzaSyCZYSa8d-_AqM624Vsm-A3lIs_9eYvQmLE AIzaSyDruUKn4sgs5VI6bwI4UUEHIaYPuUruzPE
    //AIzaSyB0i9tXWdgpTB4qgVXLLkz9r2lkMzLTRFM
    <string name="youtubedeveloperkey">AIzaSyCZYSa8d-_AqM624Vsm-A3lIs_9eYvQmLE</string>
    <string name="youtube_video_code">kAxTqRBOrKw</string>
    <string name="error_init_failure">Initialization failure: Unable to play video</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="signin">Sign in or create account</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="ok">Ok</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>

    <string name="report_location_message">To use this feature, please report your location first. Click on Manage Settings and click on Report Location button. </string>
    <string name="connectionTimeoutTitle">Connection Time Out!</string>
    <string name="networkErrorTitle">Internet Connection Error!</string>
    <string name="socketErrorTitle">Connection Error!</string>
    <string name="NoNet">No Internet Connection</string>
    <string name="networkErrorMessage">Please check your internet connectivity and try again!</string>
    <string name="socketErrorMessage">Unable to process your request, please check your internet connection and try again.</string>
    <string name="nullResponceErrorMessage">No data found!</string>
    <string name="connectionTimeoutMessage">Please check your internet connectivity and try again!</string>
    <string name="server_issue_message">No data found please try again!</string>
    <string name="sync_issue_message">Unable to Sync please try again!</string>
    <string name="data_sending_failed">Data sending failed to server</string>
    <string name="server_issue_title">Poor Signal...!</string>
    <string name="title_activity_home">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
    </string-array>

    <integer-array name="movie_imgs">

        <item>@drawable/speedunnodu_1</item>
        <item>@drawable/speedunnodu_2</item>
        <item>@drawable/speedunnodu_3</item>

        <item>@drawable/speedunnodu_4</item>
        <item>@drawable/speedunnodu_5</item>
        <item>@drawable/speedunnodu_6</item>

    </integer-array>

    <string-array name="image_names">
        <item>Speedunnodu</item>
        <item>Express Raja</item>
        <item>Nenu Sailaja</item>
        <item>BANG BANG</item>
        <item>SANAM RE</item>
        <item>AIR LIFT</item>
        <item>BATMAN V SUPERMAN</item>
        <item>WALKING DEAD</item>
        <item>CIVIL WAR</item>

        <item>Speedunnodu</item>
        <item>Express Raja</item>
        <item>Nenu Sailaja</item>
        <item>BANG BANG</item>
        <item>SANAM RE</item>
        <item>AIR LIFT</item>
        <item>BATMAN V SUPERMAN</item>
        <item>WALKING DEAD</item>
        <item>CIVIL WAR</item>

    </string-array>

    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="title_activity_movies_tab">MoviesTabActivity</string>

</resources>
