<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Antonio Leiva
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <!--<group
        android:id="@+id/md_chats"  android:checkableBehavior="single">

        <item
            android:id="@+id/chats"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/chats"/>

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/profile"/>

        <item
            android:id="@+id/findfriends"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/findfriends"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/settings"/>

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/about"/>

        <item
            android:id="@+id/alerts"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/alerts"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/logout"/>
    </group>-->

    <group
        android:id="@+id/svn_home"
        >

        <item
            android:id="@+id/home"

            android:title="@string/title_activity_home" />
    </group>

    <group
        android:id="@+id/svn_signin"
       >

        <item
            android:id="@+id/signin"
            android:title="@string/signin"
            android:visible="true"
            />
    </group>

    <group
        android:id="@+id/svn_logout"
        >

        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:visible="false"
            />
    </group>


    <group
        android:id="@+id/svn_settings"
        >
        <item
            android:id="@+id/settings"
            android:title="@string/settings" />
    </group>


    <group
        android:id="@+id/svn_about"
        >
        <item
            android:id="@+id/about"
            android:title="@string/about" />
    </group>


   <!-- <group
        android:id="@+id/wb_maybe"
        android:checkableBehavior="single">
        <item
            android:id="@+id/maybe"
            android:title="@string/maybe" />
    </group>

    <group
        android:id="@+id/wb_pviewed"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profileviewed"
            android:title="@string/profileviewed" />
    </group>

    <group
        android:id="@+id/wb_recent"
        android:checkableBehavior="single">
        <item
            android:id="@+id/recent"
            android:title="@string/recent" />
    </group>

    <group
        android:id="@+id/wb_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:title="@string/settings" />
    </group>

    <group
        android:id="@+id/wb_contactus"
        android:checkableBehavior="single">
        <item
            android:id="@+id/contactus"
            android:title="@string/contactus" />
    </group>-->


</menu>